DuPont DevSB/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Design_Checklist__c</fullName>
        <description>Checklist items completed during the Design Solution stage of this opportunity</description>
        <label>Design Checklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>*Stage 3</fullName>
                </value>
                <value>
                    <fullName>Agree on customer IP Rights</fullName>
                </value>
                <value>
                    <fullName>Applied Technology Manager Assigned</fullName>
                </value>
                <value>
                    <fullName>AuthentiPACE Phase 0</fullName>
                </value>
                <value>
                    <fullName>AuthentiPACE Phase 1</fullName>
                </value>
                <value>
                    <fullName>Blanket Wafer Testing Completed</fullName>
                </value>
                <value>
                    <fullName>Commercial issues identified</fullName>
                </value>
                <value>
                    <fullName>Competition assessment completed</fullName>
                </value>
                <value>
                    <fullName>Confidentiality Agreement in Place</fullName>
                </value>
                <value>
                    <fullName>Date Value elements completed</fullName>
                </value>
                <value>
                    <fullName>Design Study Approved</fullName>
                </value>
                <value>
                    <fullName>Design Study Submitted</fullName>
                </value>
                <value>
                    <fullName>Distributor Assigned</fullName>
                </value>
                <value>
                    <fullName>Establish Benchmark</fullName>
                </value>
                <value>
                    <fullName>Establish KPI/Customer Success Factors</fullName>
                </value>
                <value>
                    <fullName>Establish Product Performance Criteria</fullName>
                </value>
                <value>
                    <fullName>Hands-on visit and demo completed</fullName>
                </value>
                <value>
                    <fullName>Joint activity plan &amp; eval criteria</fullName>
                </value>
                <value>
                    <fullName>Joint Development Agreement in Place</fullName>
                </value>
                <value>
                    <fullName>Marathon Testing Completed</fullName>
                </value>
                <value>
                    <fullName>Needs Been transferred into Values</fullName>
                </value>
                <value>
                    <fullName>Negotiation Strategy in place</fullName>
                </value>
                <value>
                    <fullName>No New Product Needed</fullName>
                </value>
                <value>
                    <fullName>Offering fit/value validated w/Customer</fullName>
                </value>
                <value>
                    <fullName>Opportunity assessment completed</fullName>
                </value>
                <value>
                    <fullName>Opportunity Size Defined</fullName>
                </value>
                <value>
                    <fullName>Pattern Wafer Testing Completed</fullName>
                </value>
                <value>
                    <fullName>Price Approved</fullName>
                </value>
                <value>
                    <fullName>Price Provided</fullName>
                </value>
                <value>
                    <fullName>Price Submitted to Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Planned_End_Date__c</fullName>
        <label>Design - Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Solution_Start_Date__c</fullName>
        <description>Start date of design solution stage.</description>
        <label>Design Solution Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dest_Received__c</fullName>
        <description>The date &amp; time when data was transferred and succesfully updated/created into a destination system</description>
        <inlineHelpText>The date &amp; time when data was transferred and succesfully updated/created into a destination system</inlineHelpText>
        <label>Dest Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dest_Updated__c</fullName>
        <description>This field is used to determine if a backend system is updated with the most recent SF data. Everytime data is written to backend the field Dest_Received is updated with a timesamp. If the system field LastModifedDate is bigger than Dest_Received the object data needs to transferred to the backend system. The difference needs to be bigger than 1 second since LastModifiedDate is also updated when Dest_Received is written back.</description>
        <formula>((LastModifiedDate-Dest_Received__c)*84600)&lt;1 &amp;&amp; NOT(ISBLANK(Dest_Received__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the backend system has been updated with the current data.</inlineHelpText>
        <label>Dest Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Development_Type__c</fullName>
        <description>Type of development</description>
        <label>Development Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_off_List__c</fullName>
        <description>% Discount applied to every product line item of DuPont Products</description>
        <label>Discount %</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discovery_Process_Completed__c</fullName>
        <label>Discovery Process Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not  Applicable</fullName>
                    <default>true</default>
                    <label>Not  Applicable</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distributor_Total_Investment__c</fullName>
        <description>The roll-up summary of the Distributor total investment on the Opportunity-Investment records associated with this Opportunity.  Important Note:  The -copy field is used due to a Circular Reference error - and was recommended by SFDC Premier Support as a work-around.</description>
        <inlineHelpText>The roll-up summary of the Distributor total investment on the Opportunity-Investment records associated with this Opportunity.</inlineHelpText>
        <label>Distributor Total Investment</label>
        <summarizedField>Opportunity_Investment__c.Distributor_Total_Investment_copy__c</summarizedField>
        <summaryForeignKey>Opportunity_Investment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Distributor related to this opportunity</description>
        <label>Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Distributor)</relationshipLabel>
        <relationshipName>DistributorOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DuPont_Total_Investment__c</fullName>
        <description>This is the roll-up of the DuPont total Investment on the Opportunity Investment records associated with this Opportunity.  Important Note:  The -copy field is used due to a Circular Reference error - and was recommended by SFDC Premier Support as a work-around.</description>
        <inlineHelpText>This is the roll-up of the DuPont total Investment on the Opportunity Investment records associated with this Opportunity.</inlineHelpText>
        <label>DuPont Total Investment</label>
        <summarizedField>Opportunity_Investment__c.DuPont_Total_Investment_copy__c</summarizedField>
        <summaryForeignKey>Opportunity_Investment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Elapsed_Days__c</fullName>
        <description>The calculated number of total days an evaluation is in the Design Solution stage.  The calculated days is not the same as the &apos;Status&apos; days.  Also, this field makes the number of days visible to the owner.

(11/6/2017) - Removed Product_Evaluation_End__c, Customer_Qualification_Start__c, Customer_Qualification_End__c, Sample_Received__c references as part of remediation effort.</description>
        <formula>( Report_to_Customer_Date__c - NULL )+( NULL - Evaluation_Product_Sent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ending_Comments__c</fullName>
        <description>Comments relating to opportunity process end</description>
        <label>Ending Comments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Opportunity_Volume__c</fullName>
        <description>This is the estimated volume of the product opportunity to be sold</description>
        <label>Est. Opportunity Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Selling_Price__c</fullName>
        <label>Est. Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Gross_Margin__c</fullName>
        <inlineHelpText>This manual entry provides an estimate of the Gross Margin (in percentage of Total Amount) we can expect from this Opportunity. 
This should be updated when there is a change in Quantity, Amount, Product Mix or a large modification in currency</inlineHelpText>
        <label>Estimated Gross Margin</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_Max_Investment__c</fullName>
        <description>The Estimated Max Effort Hours Multiplied by the Global Average Rate

(11/7/2017) - Removed Estimated_Max_Effort_hours__c reference as part of remediation effort.</description>
        <formula>0</formula>
        <inlineHelpText>The Estimated Max Effort Hours Multiplied by the Global Average Rate</inlineHelpText>
        <label>Estimated Max Investment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Quantity__c</fullName>
        <description>Total Estimated Quantity we can expect from this Opportunity, measured in Opportunity UOM</description>
        <label>Estimated Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluation_Phase__c</fullName>
        <description>The time a solution exists in the evaluation phase

(11/6/2017) - Removed Product_Evaluation_End__c reference as part of remediation effort.</description>
        <formula>NULL  -  Evaluation_Product_Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluation Phase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluation_Product_Sent__c</fullName>
        <label>Evaluation Product Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exp_Revenue_Year_1__c</fullName>
        <description>REVENUE Year 1 (next year) with probability adjustment</description>
        <formula>Revenue_Growth_Year1__c  *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exp Revenue Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exp_Revenue_Year_2__c</fullName>
        <description>The probability adjust revenue for Year 2</description>
        <formula>Revenue_Growth_Year2__c  *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exp Revenue Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Size_Annual__c</fullName>
        <label>Expected Size (Annual)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_Data__c</fullName>
        <description>created as a part of issue IS ID-00076503</description>
        <label>Extended Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Initiative_ID__c</fullName>
        <description>Auto-number ID of the External Initiative related to this opportunity.</description>
        <formula>External_Initiative__r.External_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Initiative ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Initiative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>External Initiative (or project managed by a partner or other 3rd party) related to this opportunity</description>
        <label>External Initiative</label>
        <referenceTo>External_Initiative__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_PSA_By_Pass_Amount_Validation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To prevent the BDM from editing the amount field when the Opportunity is in &apos;Design Solution&apos; or later stages for DSS Consulting / DSS L&amp;D Resource Owning Orgs. The amount will be updated based on the Total Planned Project Price from FF Projects</description>
        <label>Bypass Amount Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Ship_Date__c</fullName>
        <label>First Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast_Input_Date__c</fullName>
        <description>The day the demand related to this opportunity has been entered in our production forecast system</description>
        <label>Forecast Input Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecasting_Group__c</fullName>
        <inlineHelpText>Indicates if this opportunity is already accounted for in a given Business Forecasting category</inlineHelpText>
        <label>Forecasting Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gap Closure</fullName>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
                <value>
                    <fullName>Not Counted</fullName>
                </value>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Formal_Proposal_Submitted__c</fullName>
        <label>Formal Proposal Submitted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not  Applicable</fullName>
                    <default>true</default>
                    <label>Not  Applicable</label>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geo_Sales_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field is used to lookup to the Geography object</description>
        <inlineHelpText>Field is used to lookup to the Geography object</inlineHelpText>
        <label>Geo Sales Country</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please enter a valid Country name</errorMessage>
            <filterItems>
                <field>Geography__c.Level__c</field>
                <operation>equals</operation>
                <value>3</value>
            </filterItems>
            <infoMessage>Please enter a valid Country name</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Geography__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Targeted Geographical scope of this opportunity (Region or Region-Subregion).</description>
        <label>Geography</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AP-ANZ</fullName>
                </value>
                <value>
                    <fullName>AP-ASEAN</fullName>
                </value>
                <value>
                    <fullName>AP-EA</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN-ANZ</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN-Cambodia/Laos/Myanmar</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN-Indonesia</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN-Malaysia</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN-Philippines</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN-Singapore</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN-Thailand</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN-Vietnam</fullName>
                </value>
                <value>
                    <fullName>AP-EA-Japan</fullName>
                </value>
                <value>
                    <fullName>AP-EA-Korea</fullName>
                </value>
                <value>
                    <fullName>AP-GCHINA</fullName>
                </value>
                <value>
                    <fullName>AP-GChina-China</fullName>
                </value>
                <value>
                    <fullName>AP-GChina-HK</fullName>
                </value>
                <value>
                    <fullName>AP-GChina-Taiwan</fullName>
                </value>
                <value>
                    <fullName>AP-INDIA</fullName>
                </value>
                <value>
                    <fullName>AP-JAPAN</fullName>
                </value>
                <value>
                    <fullName>AP-KOREA</fullName>
                </value>
                <value>
                    <fullName>AP-NA</fullName>
                </value>
                <value>
                    <fullName>AP-SA</fullName>
                </value>
                <value>
                    <fullName>AP-SA-Bangladesh</fullName>
                </value>
                <value>
                    <fullName>AP-SA-India</fullName>
                </value>
                <value>
                    <fullName>AP-SA-Sri Lanka</fullName>
                </value>
                <value>
                    <fullName>AP-SEA-ANZ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>EMEA-CEE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>There is a trigger to check whether there is an Attachment on the record. For more details on how this works please contact Tom Snyder and Vinayak Vjayakumar.</description>
        <label>HasAttachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highlights__c</fullName>
        <formula>image(&quot;/resource/1437326255000/NH_Opportunity_Header_Graphics/&quot;
&amp;Case ( RecordType.DeveloperName,
&apos;NH_Opportunity_Engage&apos;,
Case ( Priority__c ,
&apos;Diamond&apos;, &quot;EngageD.png&quot;,
&apos;Ruby&apos;, &quot;EngageR.png&quot;,
&apos;Pearl&apos;, &quot;EngageP.png&quot;,
&apos;Stone&apos;, &quot;EngageS.png&quot;,
&quot;Space.jpg&quot;
),
&apos;NH_Opportunity_Value_of_Change&apos;,
Case ( Priority__c ,
&apos;Diamond&apos;, &quot;ValueD.png&quot;,
&apos;Ruby&apos;, &quot;ValueR.png&quot;,
&apos;Pearl&apos;, &quot;ValueP.png&quot;,
&apos;Stone&apos;, &quot;ValueS.png&quot;,
&quot;Space.jpg&quot;
),
&apos;NH_Opportunity_How&apos;,
Case ( Priority__c ,
&apos;Diamond&apos;, &quot;HowD.png&quot;,
&apos;Ruby&apos;, &quot;HowR.png&quot;,
&apos;Pearl&apos;, &quot;HowP.png&quot;,
&apos;Stone&apos;, &quot;HowS.png&quot;,
&quot;Space.jpg&quot; ),
&apos;NH_Opportunity_Negotiate&apos;,
Case ( Priority__c ,
&apos;Diamond&apos;, &quot;NegD.png&quot;,
&apos;Ruby&apos;, &quot;NegR.png&quot;,
&apos;Pearl&apos;, &quot;NegP.png&quot;,
&apos;Stone&apos;, &quot;NegS.png&quot;,
&quot;Space.jpg&quot; ),
&apos;NH_Opportunity_Analyze_Options&apos;,
Case ( Priority__c ,
&apos;Diamond&apos;, &quot;AnalyzeD.png&quot;,
&apos;Ruby&apos;, &quot;AnalyzeR.png&quot;,
&apos;Pearl&apos;, &quot;AnalyzeP.png&quot;,
&apos;Stone&apos;, &quot;AnalyzeS.png&quot;,
&quot;Space.jpg&quot; )
,
&apos;NH_Opportunity_Decision_Won&apos;,
Case ( Priority__c ,
&apos;Diamond&apos;, &quot;WonD.png&quot;,
&apos;Ruby&apos;, &quot;WonR.png&quot;,
&apos;Pearl&apos;, &quot;WonP.png&quot;,
&apos;Stone&apos;, &quot;WonS.png&quot;,
&quot;Space.jpg&quot; ),
&apos;NH_Opportunity_Decision_Lost&apos;,
Case ( Priority__c ,
&apos;Diamond&apos;, &quot;LostD.png&quot;,
&apos;Ruby&apos;, &quot;LostR.png&quot;,
&apos;Pearl&apos;, &quot;LostP.png&quot;,
&apos;Stone&apos;, &quot;LostS.png&quot;,
&quot;Space.jpg&quot; ),
&quot;Space.jpg&quot;
), &quot;no image&quot; , 24,306)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Highlights</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace and Aircraft</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel and Textile</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemical Industry</fullName>
                </value>
                <value>
                    <fullName>Construction and Architecture</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Electrical and Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy Solutions</fullName>
                </value>
                <value>
                    <fullName>Food and Nutrition</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Health Care and Medical</fullName>
                </value>
                <value>
                    <fullName>Industrial and Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Marine and Rail Transportation</fullName>
                </value>
                <value>
                    <fullName>Military and Law Enforcement</fullName>
                </value>
                <value>
                    <fullName>Oil and Gas</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Plastics and Elastomers</fullName>
                </value>
                <value>
                    <fullName>Printing and Publishing</fullName>
                </value>
                <value>
                    <fullName>Pulp and Paper</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Utilities and Mining</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Involved_Org__c</fullName>
        <label>Involved Org</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABS</fullName>
                </value>
                <value>
                    <fullName>ABS-BF</fullName>
                </value>
                <value>
                    <fullName>ABS-CER</fullName>
                </value>
                <value>
                    <fullName>ABS-DTL</fullName>
                </value>
                <value>
                    <fullName>ABS-SOR</fullName>
                </value>
                <value>
                    <fullName>AGCP</fullName>
                </value>
                <value>
                    <fullName>AGCP-CPC</fullName>
                </value>
                <value>
                    <fullName>AGNH</fullName>
                </value>
                <value>
                    <fullName>AGNH-QUAL</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-Env</fullName>
                </value>
                <value>
                    <fullName>BI-Surf</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>CR&amp;D</fullName>
                </value>
                <value>
                    <fullName>DCF</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Aniline</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-DAHS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-DWT</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-Industrial</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Cyanides</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-MAP/DMS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-RMS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-SET</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Vazo</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Clean Agent Fire Extinguishants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Electronic Gases</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Fluoromonomer Intermediates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Learnings__c</fullName>
        <description>Short list of key learnings developed during this opportunity (Marketing, Sales or Service)</description>
        <label>Key Learnings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Partner__c</fullName>
        <description>This field captures the date when the Trading Partner last modified the Opportunity record and is updated via a workflow rule.</description>
        <label>Last Modified By Partner</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Ship_Date__c</fullName>
        <label>Last Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Opportunity_ID__c</fullName>
        <description>Record identifier used to tag data for migration from another source.</description>
        <label>Legacy Opportunity ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Stage__c</fullName>
        <description>Derives the stage that the opportunity was in when it was closed based upon milestone dates.

(11/6/2017) - Removed &quot;Milestone_5_Date__c&quot;, &quot;Milestone_4_Date__c&quot;, Milestone_3_Date__c, Milestone_2_Date__c references &amp; logic as part of remediation effort.</description>
        <formula>IF 
( 
ISPICKVAL(Process_Stage__c, &quot;Decision - Lost&quot;), 
NULL 
, 
&quot;&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loss Stage</label>
        <type>Text</type>
    </fields>
</CustomObject>